# base64-template

./: CMakeLists.txt  README.md
images/minions/: happy-minions.b64
images/uofa/: uofa.b64
src/: base64.cpp  base64.hpp  main.cpp
tests/: test_binary.cpp  test_unit.cpp
